<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
    
<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:text="@string/textView1" 
android:id="@+id/textView1">
</TextView>

<EditText android:id="@+id/editText1" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content">
    <requestFocus></requestFocus>
</EditText>

<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:text="@string/textView2" 
android:id="@+id/textView2">
</TextView>
<EditText android:inputType="textPersonName" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/editText2"></EditText>

<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:text="@string/textView3" 
android:id="@+id/textView3"></TextView>
<EditText android:inputType="textPassword" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/editText3"></EditText>

<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:text="@string/textView4"  
android:id="@+id/textView4">
</TextView>
<EditText android:inputType="textEmailAddress" 
android:layout_height="wrap_content" 
android:layout_width="wrap_content" 
android:id="@+id/editText4">
</EditText>

<CheckBox android:text="CheckBox" android:id="@+id/checkBox1" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>

<Button android:text="@string/button1" 
android:id="@+id/button1" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content">
</Button>

</LinearLayout>
